@@ -2,6 +2,7 @@ Version 3.7.8     unreleased
 
 	* Fix Python 3.12 deprecation for datetime.datetime.utcnow().
 	* Fix Python 3.12 warning for tar.extract() filter behavior.
+	* Fix some non-working remote connectivity tests in 'run tests full'.
 
 Version 3.7.7     14 Oct 2023
 
